@@ -18,7 +18,7 @@
 	left: 0px;
 	background: #6578a2; 
 	margin-top:-2px; 
-	margin-left:10px;
+	margin-left:11px;
 }
 
 /* Navigator & Flyout menu Styles ------*/
