@@ -26,9 +26,7 @@
 	margin-top:-2px; 
 	
 }
-#tabs li {
- padding-bottom: 0px;
-}
+
 
 
 /* Navigator and Flyout menu Styles */
