@@ -6,12 +6,12 @@
 .ui-widget-content a:hover 				 { color:red; }
 
 .ui-tabs .ui-tabs-nav 					 { padding: .3em .3em 0 .3em; border-color:#888888; background-color: #cac0b4;}
-.ui-tabs .ui-tabs-nav li 					 { font-size:0.9em; bottom:-3px; margin:0 0.15em 0 0.1em; border-color:#888888; background: #eae0d4;}
-.ui-tabs .ui-tabs-nav li a 					 { color:#555555; padding: .2em .2em .2em .2em;  }
+.ui-tabs .ui-tabs-nav li 					 { font-size:1em; bottom:0px; margin:0 0.15em 0 0.1em; border-color:#888888; background: #eae0d4;}
+.ui-tabs .ui-tabs-nav li a 					 { color:#555555; padding: .2em .3em .2em .3em;  }
 .ui-tabs .ui-tabs-nav li:hover			 { color:red; background: #dad0c4;}
 .ui-tabs .ui-tabs-nav li a:hover			 { color:red;}
 
-.ui-tabs-nav li.ui-tabs-selected  	 		 { color:#444455; padding-top:2px; top:1px; bottom:0px; border-color: #888888; border-bottom-width: 0 !important; background:#faf0e4;}
+.ui-tabs-nav li.ui-tabs-selected  	 		 { color:#444455; padding-top:0px; top:1px; bottom:0px; border-color: #888888; border-bottom-width: 0 !important; background:#faf0e4;}
 .ui-tabs-nav li.ui-tabs-selected a	 		 { font-weight:600; color:#444455; }
 .ui-tabs-nav li.ui-tabs-selected a:hover	 { font-weight:600; color:#444455; background:#faf0e4; }
 .ui-tabs-nav li.ui-tabs-selected:hover	 { background:#faf0e4; }
@@ -34,10 +34,7 @@
 	right: 0px; 
 	background: #eae0d4; 
 	margin-top:-74px; 
-	margin-right:11px;
-}
-#tabs li.ui-tabs-selected {
- padding-bottom: 1px;
+	margin-right:10px;
 }
 
 /* Navigator & Flyout menu Styles --------*/
